[package]
name = "f_psi"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = {version = "4", features = ["rand_core", "digest", "serde"]}
rand = "0.8"
fxhash = "0.2"
blake3 = "1.5.0"

[[test]]
name = "tests"
path = "benches/benchmarks.rs"

[profile.release]
lto = true

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = false
overflow-checks = false


